syntax = "proto3";

import "Enums.proto";

option java_package = "hu.bme.mit.inf.modes3.messaging.mms.messages";
option java_multiple_files = true;

message YakinduReleaseTo {
	uint32 targetID = 1;
	YakinduConnectionDirection direction = 2;
}